--- a/Projet_IMA/Projet_IMA.csproj
+++ b/Projet_IMA/Projet_IMA.csproj
@@ -63,17 +63,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form\Form2.cs">
+    <Compile Include="Form\SphereForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form\Form2.Designer.cs">
-      <DependentUpon>Form2.cs</DependentUpon>
+    <Compile Include="Form\SphereForm.Designer.cs">
+      <DependentUpon>SphereForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form\Form3.cs">
+    <Compile Include="Form\RectForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form\Form3.Designer.cs">
-      <DependentUpon>Form3.cs</DependentUpon>
+    <Compile Include="Form\RectForm.Designer.cs">
+      <DependentUpon>RectForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Objects3D\Object3D.cs" />
     <Compile Include="Objects3D\Rectangle.cs" />
@@ -100,11 +100,11 @@
     <EmbeddedResource Include="Form\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form\Form2.resx">
-      <DependentUpon>Form2.cs</DependentUpon>
+    <EmbeddedResource Include="Form\SphereForm.resx">
+      <DependentUpon>SphereForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form\Form3.resx">
-      <DependentUpon>Form3.cs</DependentUpon>
+    <EmbeddedResource Include="Form\RectForm.resx">
+      <DependentUpon>RectForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
