--- a/Projet_IMA/Projet_IMA.csproj
+++ b/Projet_IMA/Projet_IMA.csproj
@@ -81,22 +81,22 @@
     <Compile Include="Objects3D\Sphere.cs" />
     <Compile Include="Lights\DirectionalLight.cs" />
     <Compile Include="Lights\Light.cs" />
-    <Compile Include="RenderSing.cs" />
-    <Compile Include="ZBuffer.cs" />
-    <Compile Include="Couleur.cs" />
-    <Compile Include="Ecran.cs" />
+    <Compile Include="base\RenderSing.cs" />
+    <Compile Include="base\ZBuffer.cs" />
+    <Compile Include="base\Couleur.cs" />
+    <Compile Include="base\Ecran.cs" />
     <Compile Include="Form\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Trigo_InvertCoordSpherique.cs" />
+    <Compile Include="base\Trigo_InvertCoordSpherique.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="ProjetEleve.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Texture.cs" />
-    <Compile Include="V3.cs" />
+    <Compile Include="base\Texture.cs" />
+    <Compile Include="base\V3.cs" />
     <EmbeddedResource Include="Form\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
